<resources>
    <string name="app_name">Dengue Alert</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">News Category</string>
    <string name="menu_nearest_medical">Nearest Medical</string>
    <string name="menu_feedback">Feedback</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_news">News</string>
    <string name="feedback_to_app">Phản hồi về ứng dụng</string>
    <string name="feedback_description">Vui lòng nhập ý kiến phản hồi của bạn để góp phần làm cho ứng dụng của chúng tôi ngày càng hoàn thiện hơn.</string>
    <string name="feedback_hint">Ý kiến phản hồi của bạn ...</string>
    <string name="send_feedback">Gửi phản hồi</string>
    <string name="warning">Cảnh báo bệnh truyền nhiễm</string>
    <string name="loggin">Đăng nhập</string>
    <string name="lable_signing">Chưa có tài khoản /<font color="#3F51B5"><b> Đăng kí</b></font></string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="channel_description">Thông báo</string>
    <string name="category_theme">Chủ đề tin tức</string>
    <string name="home_everyone">Mọi người cùng chung tay phòng chống dịch bệnh sốt xuất huyết</string>
    <string name="home_button">Tin tức sốt xuất huyết</string>
    <string name="info_app">Thông tin ứng dụng</string>
    <string name="privacy">Dengue alert là một ứng dụng cảnh báo chủ động, hỗ trợ người dân phát hiện và tránh tiếp xúc với các yếu tố nguy cơ lây nhiễm sốt xuất huyết. Đồng thời, ứng dụng cũng cung cấp các thông tin cần thiết vầ bệnh sốt xuất huyết như thông tin về tác nhân gây bệnh, các biện pháp phòng tránh và các cơ sở y tế gần nhất đối với người dân.</string>
    <string name="note">Dengue Alert không thực hiện lưu trữ, thu thập dữ liệu vị tí của dười dùng.</string>
    <string name="accept_use">Đồng ý sử dụng</string>
    <string name="title_category">Bệnh sốt xuất huyết</string>
    <string name="retry">Thử lại</string>
</resources>