<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nimpe_background_login"
    android:orientation="vertical"
    tools:context=".ui.security.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="160dp" />

            <LinearLayout
                android:layout_below="@id/space"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_login"
                android:orientation="vertical"
                android:padding="24dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_login" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/warning"
                    android:textColor="@color/gray"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/NimpeInputLayoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/NimpeInputLayoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_submit"
                    style="@style/NimpeButtonLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:padding="14dp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:text="@string/loggin" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_sigin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/lable_signing"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>